--- a/svo/package.xml
+++ b/svo/package.xml
@@ -16,12 +16,11 @@
   <build_depend>cmake_modules</build_depend> <!-- for FindEigen.cmake -->
   <build_depend>roscpp</build_depend>
   <build_depend>roslib</build_depend>
-  <build_depend>vikit_common</build_depend>
-  <build_depend>vikit_ros</build_depend>
+  <build_depend>tf</build_depend>
 
   <!-- Dependencies needed after this package is compiled. -->
   <run_depend>roscpp</run_depend>
   <run_depend>roslib</run_depend>
-  <run_depend>vikit_common</run_depend>
-  <run_depend>vikit_ros</run_depend>
+  <run_depend>tf</run_depend>
+
 </package>
