--- a/svo_ros/CMakeLists.txt
+++ b/svo_ros/CMakeLists.txt
@@ -76,3 +76,5 @@ ADD_EXECUTABLE(vo src/vo_node.cpp)
 TARGET_LINK_LIBRARIES(vo svo_visualizer)
 ADD_EXECUTABLE(benchmark src/benchmark_node.cpp)
 TARGET_LINK_LIBRARIES(benchmark svo_visualizer)
+ADD_EXECUTABLE(runsvo src/svo_ros_node.cpp)
+TARGET_LINK_LIBRARIES(runsvo svo_visualizer)
