fix bug. update camera angle for euroc

--- a/svo/CMakeLists.txt
+++ b/svo/CMakeLists.txt
@@ -130,7 +130,8 @@ LIST(APPEND SOURCEFILES
   src/feature_detection.cpp
   src/depth_filter.cpp
   src/config.cpp
-  src/sparse_img_align.cpp)
+  src/sparse_img_align.cpp
+  src/solve_5points.cpp)
 
 # Add g2o if available
 IF(HAVE_G2O)
